<resources>
    <string name="app_name">Igbo Amaka</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="IgboAmaka">Igbò Amáká</string>
    <string name="anambra">Anambra</string>
    <string name="awka">Awka</string>
    <string name="light_of_the_nation">-Light of the Nation-</string>
    <string name="abia">Abia</string>
    <string name="umuahia">Umuahia</string>
    <string name="god_s_own_state">-God\'s Own State-</string>
    <string name="ebonyi">Ebonyi</string>
    <string name="abakaliki">Abakaliki</string>
    <string name="salt_of_the_nation">-Salt of the Nation-</string>
    <string name="enugu">Enugu</string>
    <string name="coal_city_state">-Coal City State-</string>
    <string name="imo">Imo</string>
    <string name="owerri">Owerri</string>
    <string name="eastern_heartland">-Eastern Heartland -</string>
    <string name="_1">1</string>
    <string name="todo">TODO</string>
    <string name="dog">Dog</string>
    <string name="nkita">nkita</string>
    <string name="identify_the_image_above">Identify the image above</string>
    <string name="numbers">Numbers</string>
    <string name="family">Family</string>
    <string name="animals">Animals</string>
    <string name="colours">Colours</string>
    <string name="otu">ótù</string>
    <string name="what_is_the_capital_nof_the_united_kingdom">What is the capital \nof the United Kingdom</string>
    <string name="identify_the_body_part_that_does_the_verb_above">Identify the body part that does the verb above</string>
    <string name="home">Home</string>
    <string name="quiz">Quiz</string>
    <string name="fun_facts">Fun Facts</string>
    <string name="identify_the_colour_on_the_text_above">Identify the colour on the text above</string>
    <string name="question_0_10">Question 0/10</string>
    <string name="finish">FINISH</string>
    <string name="abacha">ABACHA</string>
    <string name="abacha_is_an_eastern_nigeria_dish_made_using_dried_shredded_cassava_you_can_eat_it_as_a_snack_or_a_full_meal">Abacha is an Eastern Nigeria dish made using dried, shredded cassava. You can eat it as a snack or a full meal.</string>
    <string name="nna">nna</string>
    <string name="translate_the_word_in_quotes">Translate the word in quotes</string>
    <string name="body_parts">Body Parts</string>
    <string name="simple_nsentences">Simple \nSentences</string>
    <string name="house_hold_items">House-Hold Items</string>
    <string name="next">NEXT</string>
    <string name="prev">PREV</string>
    <string name="translate_the_sentence_above">Translate the sentence above</string>
    <string name="alphabets">Alphabets</string>
    <string name="the_igbo_culture">THE IGBO CULTURE</string>
    <string name="the_igbo_people_are_descendants_from_eri_a_divine_figure_who_according_to_igbo_folklore_was_sent_from_heaven_to_begin_civilization_nigbo_culture_menala_nd_igbo_are_the_customs_practices_and_traditions_of_the_igbo_people_of_southeastern_nigeria">The Igbo people are descendants from Eri, a divine figure who, according to Igbo folklore, was sent from heaven to begin civilization. \nIgbo culture (Ọmenala ndị Igbo) are the customs, practices and traditions of the Igbo people of southeastern Nigeria.</string>
    <string name="swipe"><![CDATA[SWIPE > > >]]></string>
    <string name="welcome">Welcome!</string>
    <string name="kedu_ka_mere">Kedu ka ị mere?</string>
    <string name="test_your_knowledge">Test your knowledge</string>
    <string name="sentences">Sentences</string>
    <string name="dressing">DRESSING</string>
    <string name="cloths_in_the_land_have_a_significant_meaning_or_purpose">Cloths in the land have a significant meaning or purpose</string>
    <string name="kedu">Kedu</string>
    <string name="how_are_you">How are you?</string>
    <string name="animal_quiz_option3">animal_quiz_option3</string>
    <string name="bodyparts_card_quiz">bodyparts_card_quiz</string>
    <string name="colours_option3">colours_option3</string>
    <string name="greetings_speaker">greetings_speaker</string>
    <string name="animal_image">animal_image</string>
    <string name="family_image">family_image</string>
    <string name="food_image">food_image</string>
    <string name="fun_facts_image">fun_facts_image</string>
    <string name="proverbs_speaker">proverbs_speaker</string>
    <string name="igbo_design">igbo_design</string>
    <string name="igbo_design_right">igbo_design_right</string>
    <string name="animal_speaker">animal_speaker</string>
</resources>