<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/black"
    android:id="@+id/colour_card_view_item"
    app:cardUseCompatPadding="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/white_colour"
            android:fontFamily="@font/lato_regular"
            android:id="@+id/englishColour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_1"
            android:textSize="25sp">
        </TextView>

        <TextView
            android:textColor="@color/white_colour"
            android:fontFamily="@font/lato_regular"
            android:layout_below="@id/englishColour"
            android:id="@+id/igboColour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/otu"
            android:textSize="20sp">
        </TextView>


    </RelativeLayout>

    <View
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|end"
        android:background="@drawable/endview_background">

    </View>

    <ImageView
        android:layout_gravity="bottom|end"
        android:layout_margin="5dp"
        android:src="@drawable/ic_baseline_volume_up_24"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription">
    </ImageView>

</com.google.android.material.card.MaterialCardView>