<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profile_card_proverbs"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="4dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:src="@drawable/ic_baseline_volume_up_24"
            android:layout_gravity="center"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:contentDescription="@string/todo"
            tools:ignore="ContentDescription">

        </ImageView>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/profile_card_names"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toEndOf="@+id/profile_card_proverbs"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownIdInLayout">

        <TextView
            android:id="@+id/igbo_proverb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/kedu"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="101dp" />

        <TextView
            android:id="@+id/english_proverb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/how_are_you"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:textSize="13sp"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="120dp" />

    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>