<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/bodyparts_question_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/question_0_10"
            android:textColor="@color/yellow_orange"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>

        <TextView
            android:id="@+id/bodyparts_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/what_is_the_capital_nof_the_united_kingdom"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bodyparts_question_counter" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/identify_the_body_part_that_does_the_verb_above"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bodyparts_question" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:columnCount="2"
            android:padding="15dp"
            android:rowCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.076">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/bodyparts_option1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/pink_red"
                app:cardCornerRadius="15dp"
                app:rippleColor="@color/white_colour">

                <TextView
                    android:id="@+id/bodyparts_option1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/numbers"
                    android:textColor="@color/white_colour"
                    android:textStyle="bold" />

                <View
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/endview_background" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/bodyparts_option2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/orange_pink"
                app:cardCornerRadius="15dp"
                app:rippleColor="@color/white_colour">

                <TextView
                    android:id="@+id/bodyparts_option2Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/family"
                    android:textColor="@color/white_colour"
                    android:textStyle="bold" />

                <View
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/endview_background" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/bodyparts_option3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/pale_yellow"
                app:cardCornerRadius="15dp"
                app:rippleColor="@color/white_colour">

                <TextView
                    android:id="@+id/bodyparts_option3Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/animals"
                    android:textColor="@color/white_colour"
                    android:textStyle="bold" />

                <View
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/endview_background" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/bodyparts_option4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/purple"
                app:cardCornerRadius="15dp"
                app:rippleColor="@color/white_colour">

                <TextView
                    android:id="@+id/bodyparts_option4Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/colours"
                    android:textColor="@color/white_colour"
                    android:textStyle="bold" />

                <View
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|end"
                    android:background="@drawable/endview_background" />
            </com.google.android.material.card.MaterialCardView>


        </GridLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>